force-app/main/default/objects/Enquiry__c/fields/what_Type_of_Building__c.field-meta.xml
<CustomField>
    <fullName>what_Type_of_Building__c</fullName>
    <label>what Type of Building</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RCC</fullName>
            </value>
            <value>
                <fullName>PEB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>