force-app/main/default/objects/Enquiry__c/fields/whats_the_No_of_shutters_required__c.field-meta.xml
<CustomField>
    <fullName>whats_the_No_of_shutters_required__c</fullName>
    <label>whats the No of shutters required</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>