force-app/main/default/objects/Enquiry__c/fields/whats_your_designation__c.field-meta.xml
<CustomField>
    <fullName>whats_your_designation__c</fullName>
    <label>whats your designation?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>