force-app/main/default/objects/Enquiry__c/fields/which_location_are_you_looking__c.field-meta.xml
<CustomField>
    <fullName>which_location_are_you_looking__c</fullName>
    <label>which location are you looking ?</label>
    <type>TextArea</type>
</CustomField>