force-app/main/default/objects/Enquiry__c/recordTypes/Industrial_Park.recordType-meta.xml
<RecordType>
    <fullName>Industrial_Park</fullName>
    <active>true</active>
    <label>Industrial Park</label>
</RecordType>