force-app/main/default/objects/Enquiry__c/validationRules/Mandate_Field_Urgent.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandate_Field_Urgent</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(TEXT(Types_of_F_W__c))),
    ISBLANK( how_urgent_is_the_requirement__c )
)</errorConditionFormula>
    <errorMessage>How urgent is the requirement is required Field</errorMessage>
</ValidationRule>