force-app/main/default/objects/Enquiry__c/validationRules/Phone_Number_Validation_on_Enquiry.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Number_Validation_on_Enquiry</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(
  OR(
    REGEX(Mobile__c, &quot;^\\+?[0-9]{10}$&quot;),
    REGEX(Mobile__c, &quot;^\\+[0-9]{12}$&quot;)
  )
)</errorConditionFormula>
    <errorDisplayField>Mobile__c</errorDisplayField>
    <errorMessage>Please enter a valid phone number, without any letters or special characters!</errorMessage>
</ValidationRule>