force-app/main/default/objects/Enquiry__c/validationRules/Read_only_rule_for_Qualified.validationRule-meta.xml
<ValidationRule>
    <fullName>Read_only_rule_for_Qualified</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    $Profile.Name = &quot;Platform Profile&quot;,
    ISCHANGED(Status__c),
    TEXT(PRIORVALUE(Status__c)) = &quot;Closed&quot;
)</errorConditionFormula>
    <errorMessage>Once Status : Closed and Reason for Closed: Qualified cannot Edit the field</errorMessage>
</ValidationRule>