force-app/main/default/objects/Enquiry__c/validationRules/Require_Reason_When_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Reason_When_Closed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, &quot;Closed&quot;),
    ISPICKVAL(Reason_for_Closed__c, &quot;&quot;)
)</errorConditionFormula>
    <errorMessage>Please select a Reason for Closure when the Status is Closed.</errorMessage>
</ValidationRule>