force-app/main/default/objects/Enquiry__c/validationRules/Required_fields_for_Qualified.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_fields_for_Qualified</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
        ISPICKVAL( Reason_for_Closed__c , &quot;Qualified&quot;),
         OR(
            ISBLANK( Size_in_sqfts__c ),
            ISPICKVAL( Size_in_sqft__c ,&quot;&quot;),
            ISPICKVAL(  Type_of_Unit__c,&quot;&quot; )
        )
    )</errorConditionFormula>
    <errorMessage>All of the following fields are required: Size Required, Size Range, and Size (in sqft).</errorMessage>
</ValidationRule>