force-app/main/default/objects/Enquiry__c/listViews/All_Enquirys.listView-meta.xml
<ListView>
    <fullName>All_Enquirys</fullName>
    <columns>NAME</columns>
    <columns>Email__c</columns>
    <columns>Mobile__c</columns>
    <columns>Size_in_sqfts__c</columns>
    <columns>Status__c</columns>
    <columns>Reason_for_Closed__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>RECORDTYPE</columns>
    <columns>Intent_Type__c</columns>
    <columns>Type_of_Unit__c</columns>
    <columns>Enquiry_Source__c</columns>
    <columns>Enquiry_Sub_Source__c</columns>
    <columns>Contact_Person__c</columns>
    <columns>Lookup_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Enquirys</label>
</ListView>