force-app/main/default/objects/Enquiry__c/listViews/All_My_Enquiries_Closed_Lost.listView-meta.xml
<ListView>
    <fullName>All_My_Enquiries_Closed_Lost</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>All My Enquiries Closed Lost</label>
</ListView>