force-app/main/default/objects/Enquiry__c/listViews/All_My_Enquiries_Closed_this_Month.listView-meta.xml
<ListView>
    <fullName>All_My_Enquiries_Closed_this_Month</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>All My Enquiries Closed this Month</label>
</ListView>