force-app/main/default/objects/Enquiry__c/listViews/All_My_Open_Enquiries.listView-meta.xml
<ListView>
    <fullName>All_My_Open_Enquiries</fullName>
    <columns>NAME</columns>
    <columns>Email__c</columns>
    <columns>Enquiry_Number__c</columns>
    <filterScope>Mine</filterScope>
    <label>All My Open Enquiries</label>
</ListView>