force-app/main/default/objects/Enquiry__c/listViews/Team_s_Enquiries_Closed_Lost.listView-meta.xml
<ListView>
    <fullName>Team_s_Enquiries_Closed_Lost</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Team&apos;s Enquiries Closed Lost</label>
</ListView>