force-app/main/default/objects/Enquiry__c/listViews/Team_s_Enquiries_Closed_this_Month.listView-meta.xml
<ListView>
    <fullName>Team_s_Enquiries_Closed_this_Month</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Team&apos;s Enquiries Closed this Month</label>
</ListView>