force-app/main/default/objects/Enquiry__c/listViews/Team_s_Enquiry.listView-meta.xml
<ListView>
    <fullName>Team_s_Enquiry</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Team&apos;s Enquiry</label>
</ListView>