force-app/main/default/objects/Enquiry__c/listViews/Team_s_Open_Enquiries.listView-meta.xml
<ListView>
    <fullName>Team_s_Open_Enquiries</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Team&apos;s Open Enquiries</label>
</ListView>